--- a/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
+++ b/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
@@ -213,7 +213,7 @@ ccd:
     replicas: 1
   logstash:
     image:
-      tag: ccd-sscs-logstash-latest
+      tag: 8.5.1
   ccd-admin-web:
     nodejs:
       image: hmctspublic.azurecr.io/ccd/admin-web:latest
