--- a/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
+++ b/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
@@ -212,8 +212,8 @@ ccd:
     clusterName: "es"
     replicas: 1
   logstash:
-    image:
-      tag: 8.5.1
+    image: hmctspublic.azurecr.io/imported/logstash/logstash
+    imageTag: 8.5.1
   ccd-admin-web:
     nodejs:
       image: hmctspublic.azurecr.io/ccd/admin-web:latest
