--- a/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
+++ b/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
@@ -211,21 +211,24 @@ ccd:
     nameOverride: ${SERVICE_NAME}-es
     clusterName: "es"
     replicas: 1
-
   logstash:
-    image: hmctspublic.azurecr.io/imported/logstash/logstash:8.5.1
+    image: hmctspublic.azurecr.io/imported/logstash/logstash
     imageTag: 8.5.1
     imagePullPolicy: "IfNotPresent"
     logstashJavaOpts: -Xmx1g -Xms512M
   ccd-admin-web:
     nodejs:
       image: hmctspublic.azurecr.io/ccd/admin-web:latest
-      ingressHost: admin-web-${SERVICE_FQDN}
+      ingressHost: ${SERVICE_NAME}-ccd-admin-web
+      disableKeyVaults: true
       environment:
-        IDAM_ADMIN_WEB_SERVICE_KEY: ${ADMIN_S2S_KEY}
         IDAM_OAUTH2_AW_CLIENT_SECRET: ${ADMIN_WEB_IDAM_SECRET}
-      keyVaults: [ ]
-
+        IDAM_BASE_URL: https://idam-api.aat.platform.hmcts.net
+        IDAM_OAUTH2_TOKEN_ENDPOINT: https://idam-web-public.aat.platform.hmcts.net/oauth2/token'
+        IDAM_S2S_URL: http://rpe-service-auth-provider-aat.service.core-compute-aat.internal
+    idam-pr:
+      releaseNameOverride: ${SERVICE_NAME}-ccd-admin-idam-pr
+      enabled: true
 
   ccd-user-profile-api:
     java:
@@ -521,3 +524,4 @@ servicebus:
       - name: hmc-from-hmi
       - name: hmc-to-hmi
       - name: tribunals-to-hearing-api
+
