--- a/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
+++ b/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
@@ -214,7 +214,7 @@ ccd:
 
   logstash:
     image:logstash:
-    image: hmctspublic.azurecr.io/imported/logstash/logstash:8.5.1
+    image: hmctspublic.azurecr.io/imported/logstash/logstash
     imageTag: 8.5.1
     imagePullPolicy: "IfNotPresent"
     logstashJavaOpts: -Xmx1g -Xms512M
