--- a/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
+++ b/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
@@ -212,9 +212,7 @@ ccd:
     clusterName: "es"
     replicas: 1
   logstash:
-    image: hmctspublic.azurecr.io/imported/logstash/logstash
-    imageTag: 8.5.1
-    imagePullPolicy: "IfNotPresent"
+    image: hmctspublic.azurecr.io/imported/logstash/logstash:latest
     logstashJavaOpts: -Xmx1g -Xms512M
   ccd-admin-web:
     nodejs:
