Rebase on master

--- a/.env
+++ b/.env
@@ -32,6 +32,7 @@ APPINSIGHTS_INSTRUMENTATIONKEY=SomeRandomStringForLocalDocker
 # Work Allocation
 # export AZURE_SERVICE_BUS_CONNECTION_STRING="Endpoint=sb://ccd-servicebus-demo.servicebus.windows.net/;SharedAccessKeyName=SendAndRecieveCCDMessage;SharedAccessKey=REPLACEME"
 export AZURE_SERVICE_BUS_TOPIC_NAME=ccd-case-events
+export AZURE_SERVICE_BUS_MESSAGE_AUTHOR=sscs-local-1
 export AZURE_SERVICE_BUS_SUBSCRIPTION_NAME=ccd-case-events
 export AZURE_SERVICE_BUS_CCD_CASE_EVENTS_SUBSCRIPTION_NAME=ccd-case-events
 
@@ -60,11 +61,20 @@ export DOCUMENT_STORE_URL=http://localhost:5005
 export WA_SYSTEM_USERNAME=wa-system-user@fake.hmcts.net
 export WA_SYSTEM_PASSWORD=System01
 
+export CITIZEN_USERNAME=sscs-citizen@hmcts.net
+export CITIZEN_PASSWORD=password
+
+export SYSTEMUPDATE_USERNAME=system.update@hmcts.net
+export SYSTEMUPDATE_PASSWORD=password
+
 export SUPERUSER_USERNAME=super-user@example.com
 export SUPERUSER_PASSWORD=password
 
 export CASEWORKER_USERNAME=local.test@example.com
 export CASEWORKER_PASSWORD=password
+
+export CTSC_ADMINISTRATOR_USERNAME=ctsc-administrator@hmcts.net
+export CTSC_ADMINISTRATOR_PASSWORD=password
 
 export WA_CASEOFFICER_USERNAME=wa-caseofficer-user@fake.hmcts.net
 export WA_CASEOFFICER_PASSWORD=System01
