--- a/build.gradle
+++ b/build.gradle
@@ -329,7 +329,7 @@ dependencies {
     implementation group: 'com.github.hmcts', name: 'cmc-pdf-service-client', version: '7.0.1'
 
 
-    implementation group: 'com.github.hmcts', name: 'sscs-common', version: 'SSCS-11384-SNAPSHOT'
+    implementation group: 'com.github.hmcts', name: 'sscs-common', version: '0e1ce82'
     implementation group: 'com.github.hmcts', name: 'sscs-pdf-email-common', version: '1.8.3'
 
     implementation group: 'com.azure', name: 'azure-core', version: '1.37.0'
