Updated the log version

--- a/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
+++ b/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
@@ -215,7 +215,7 @@ ccd:
   logstash:
     image: hmctspublic.azurecr.io/imported/logstash/logstash
     imageTag: 8.5.1
-    imagePullPolicy: "IfNotPresent"
+    imagePullPolicy: "Always"
     logstashJavaOpts: -Xmx1g -Xms512M
   ccd-admin-web:
     nodejs:
