SSCS-10544: Added the changes for set aside grant flow (#3145)
* SSCS-10544: Added the changes for set aside grant flow

* Added junit test case

* Updated as per the review comment

* Updated as per the review comment

* Updated as per the review comment

* update to helm chart releases

* update to ccd helm chart release

* update to elasticsearch helm chart release

* removed redundant section

* move to ES from CCD chart

* SSCS-10544: Added the changes for set aside grant flow

* Added junit test case

* Updated as per the review comment

* Updated as per the review comment

* Updated as per the review comment

* Added CVE suppress

* Updated the status of the case

* Updated to fix the testing issue

* Added preivew changes

* Preview changes

* Updated for preview setup

* Added changes for preview

* Added changes for preivew

* Added changes for preview

* SSCS-10544: Added the changes for set aside grant flow

* Added junit test case

* Updated as per the review comment

* Updated as per the review comment

* Updated as per the review comment

* Added junit test case

* Added CVE suppress

* Updated the status of the case

* Updated to fix the testing issue

* Added preivew changes

* Preview changes

* Updated for preview setup

* Added changes for preview

* Added changes for preivew

* Added changes for preview

* SSCS-10544 updates common ver to 79428ae

* Added the change version changes

* Updated the common version

* Added suppression

* Updated the review comment

* Removed the suppression

---------

Co-authored-by: Jarek Pierchala <jaroslaw.pierchala@hmcts.net>
Co-authored-by: adusumillipraveen <adusumillipraveenkumar@gmail.com>
Co-authored-by: amoslv1 <110455092+amoslv1@users.noreply.github.com>
Co-authored-by: amoslv1 <lucian.amos@version1.com>

--- a/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
+++ b/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
@@ -317,7 +317,7 @@ ccd:
     environment:
       CCD_ENVIRONMENT: 'PROD'
       CCD_DEF_EM_CCD_ORCHESTRATOR_URL: http://${SERVICE_NAME}-em-ccd-orchestrator
-      CCD_DEF_SSCS_CCD_ORCHESTRATOR_URL: http://${SERVICE_NAME}-sscs-ccd-orchestrator
+      CCD_DEF_SSCS_CCD_ORCHESTRATOR_URL: http://${SERVICE_NAME}-sscs-ccd-callback-orchestrator
       CCD_DEF_TRIBUNALS_API_URL: http://${SERVICE_NAME}-java
       CCD_DEF_TYA_NOTIFICATIONS_API_URL: http://${SERVICE_NAME}-tya-notification
       CCD_DEF_BULK_SCAN_API_URL: http://${SERVICE_NAME}-bulk-scan-api
@@ -363,9 +363,10 @@ sscs-evidence-share:
       DOCUMENT_MANAGEMENT_URL: "http://dm-store-aat.service.core-compute-aat.internal"
       CORE_CASE_DATA_API_URL: "http://${SERVICE_NAME}-ccd-data-store-api"
       SUBSCRIPTION_NAME: "sscs-evidenceshare-subscription-aat"
-      TOPIC_NAME: "sscs-evidenceshare-topic-aat"
+      TOPIC_NAME: "sscs-evidenceshare-topic-preview"
       AMQP_HOST: "sscs-servicebus-aat.servicebus.windows.net"
-      AMQP_USERNAME: "SendAndListenSharedAccessKey"
+      AMQP_USERNAME: "preview_policy"
+      AMQP_PASSWORD: "LDSKtI6uxg5uggvLDx/4WcfZfP/RJkSrg+ASbMuROsM="
       ROBOTICS_EMAIL_FROM: "sscs@hmcts.net"
       ROBOTICS_EMAIL_TO: "fake"
       ROBOTICS_EMAIL_SCOTTISH_TO: "fake2"
@@ -379,9 +380,12 @@ sscs-ccd-callback-orchestrator:
     releaseNameOverride: ${SERVICE_NAME}-sscs-ccd-callback-orchestrator
     readinessDelay: 90
     environment:
-      SUBSCRIPTION_NAME: "sscs-evidenceshare-subscription-aat"
-      TOPIC_NAME: "sscs-evidenceshare-topic-aat"
+      SUBSCRIPTION_NAME: "sscs-evidenceshare-topic-preview"
+      TOPIC_NAME: "sscs-evidenceshare-topic-preview"
       AMQP_HOST: "sscs-servicebus-aat.servicebus.windows.net"
+      AMQP_USERNAME: "preview_policy"
+      AMQP_PASSWORD: "LDSKtI6uxg5uggvLDx/4WcfZfP/RJkSrg+ASbMuROsM="
+
 
 #Enable for SYA
 sscs-tribunals-frontend:
