--- a/build.gradle
+++ b/build.gradle
@@ -70,7 +70,7 @@ sourceSets {
         }
     }
     contractTest {
-        java {
+        java {m
             compileClasspath += main.output
             runtimeClasspath += main.output
             srcDir file('src/contractTest/java')
@@ -328,7 +328,7 @@ dependencies {
     implementation group: 'com.github.hmcts', name: 'document-management-client', version: '7.0.0'
     implementation group: 'com.github.hmcts', name: 'cmc-pdf-service-client', version: '7.0.1'
 
-    implementation group: 'com.github.hmcts', name: 'sscs-common', version: 'fad989e0e5'//SSCS-10007-SNAPSHOT'
+    implementation group: 'com.github.hmcts', name: 'sscs-common', version: '4.25.20'
     implementation group: 'com.github.hmcts', name: 'sscs-pdf-email-common', version: '1.8.3'
 
     implementation group: 'com.azure', name: 'azure-core', version: '1.37.0'
