--- a/build.gradle
+++ b/build.gradle
@@ -70,7 +70,7 @@ sourceSets {
         }
     }
     contractTest {
-        java {m
+        java {
             compileClasspath += main.output
             runtimeClasspath += main.output
             srcDir file('src/contractTest/java')
