--- a/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
+++ b/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
@@ -237,6 +237,11 @@ ccd:
         value: http://${SERVICE_NAME}-es-master:9200
       - name: ES_URL
         value: http://${SERVICE_NAME}-es-master:9200
+    logstashConfig:
+       logstash.yml: |
+         http.host: 0.0.0.0
+         xpack.monitoring.enabled: false
+         xpack.monitoring.elasticsearch.hosts: ["http://${SERVICE_NAME}-es-master:9200"]
     elasticsearch:
       host: ${SERVICE_NAME}-es-master
       port: 9200
