--- a/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
+++ b/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
@@ -240,7 +240,7 @@ ccd:
     logstashConfig:
        logstash.yml: |
          http.host: 0.0.0.0
-         xpack.monitoring.enabled: false
+         xpack.monitoring.enabled: true
          xpack.monitoring.elasticsearch.hosts: ["http://${SERVICE_NAME}-es-master:9200"]
     elasticsearch:
       host: ${SERVICE_NAME}-es-master
