Update environment variables, am role assignments; Set scannedDocumentTypes property on case data

--- a/.env
+++ b/.env
@@ -76,6 +76,9 @@ export CASEWORKER_PASSWORD=password
 export CTSC_ADMINISTRATOR_USERNAME=ctsc-administrator@hmcts.net
 export CTSC_ADMINISTRATOR_PASSWORD=password
 
+export JUDGE_USERNAME=judge@example.com
+export JUDGE_PASSWORD=password
+
 export WA_CASEOFFICER_USERNAME=wa-caseofficer-user@fake.hmcts.net
 export WA_CASEOFFICER_PASSWORD=System01
 
