--- a/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
+++ b/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
@@ -222,8 +222,8 @@ ccd:
         memory: "512Mi"
 
   logstash:
-    image: hmctspublic.azurecr.io/ccd/logstash
-    imageTag: "latest"
+    image: hmctspublic.azurecr.io/imported/logstash/logstash
+    imageTag: 7.16.1
     elasticsearch:
       host: ${SERVICE_NAME}-es-master
       port: 9200
