--- a/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
+++ b/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
@@ -248,15 +248,19 @@ ccd:
         value: http://${SERVICE_NAME}-es-master:9200
       - name: ES_URL
         value: http://${SERVICE_NAME}-es-master:9200
-    configTpl:
-      xpack.monitoring.enabled: "false"
-      db.url: jdbc:postgresql://${SERVICE_NAME}-postgresql:5432/data-store?ssl=disable&stringtype=unspecified
-      db.user: hmcts
-      db.pwd: hmcts
-      es.data.nodes.url: http://${SERVICE_NAME}-es-master:9200
-    pipelines.yml: |
-      - pipeline.id: main
-        path.config: "/usr/share/logstash/pipeline/{01_input,02_filter,03_output}.conf"
+    logstashConfig:
+      logstash.yml: |
+        http.host: 0.0.0.0
+        xpack.monitoring.enabled: true
+        xpack.monitoring.elasticsearch.hosts: ["${ES_HOSTS}"]
+        queue.type: persisted
+        dead_letter_queue.enable: true
+      pipelines.yml: |
+        - pipeline.id: main
+          path.config: "/usr/share/logstash/pipeline/{01_input,02_filter,03_output}.conf"
+          pipeline.workers: 4
+          pipeline.batch.size: 500
+          queue.type: persisted
     logstashPipeline:
       01_input.conf: |
         input  {
