--- a/src/main/resources/config/application.properties
+++ b/src/main/resources/config/application.properties
@@ -61,6 +61,7 @@ doc_assembly.url=${DOC_ASSEMBLY_URL:http://localhost:4631}
 doc_assembly.adjourn_case=TB-SCS-GNO-ENG-adjournment-notice.docx
 doc_assembly.postponementrequest=TB-SCS-GNO-ENG-00754.docx
 doc_assembly.posthearingrequest=TB-SCS-GNO-ENG-00754.docx
+doc_assembly.write_statementofreasons=TB-SCS-GNO-ENG-00754.docx
 docmosis.accessKey= ${PDF_SERVICE_ACCESS_KEY:}
 docmosis.convert.endpoint= ${PDF_SERVICE_CONVERT_URL:https://docmosis.aat.platform.hmcts.net/rs/convert}
 docmosis.health.endpoint= ${PDF_SERVICE_HEALTH_URL:https://docmosis.aat.platform.hmcts.net/rs/status}
@@ -127,7 +128,7 @@ feature.postponements.enabled: ${POSTPONEMENTS_FEATURE:false}
 feature.sscs2.enabled: ${SSCS2_FEATURE:false}
 feature.work-allocation.enabled: ${WORK_ALLOCATION_FEATURE:false}
 feature.gaps-switchover.enabled: ${GAPS_SWITCHOVER_FEATURE:false}
-feature.snl.enabled: ${SCHEDULE_LISTING_FEATURE:false}
+feature.snl.enabled: ${SCHEDULE_LISTING_FEATURE:true}
 feature.snl.adjournment.enabled: ${ADJOURNMENT_FEATURE:false}
 feature.case-access-management.enabled: ${CASE_ACCESS_MANAGEMENT_FEATURE:false}
 feature.postHearings.enabled: ${POST_HEARINGS_FEATURE:false}
