--- a/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
+++ b/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
@@ -221,13 +221,13 @@ ccd:
       enabled: false
     extraEnvs:
       - name: DATA_STORE_PASS
-        value: "{{ tpl .Values.global.postgresUsername $}}"
+        value: hmcts
       - name: DATA_STORE_URL
-        value: "jdbc:postgresql://{{ .Release.Name }}-postgresql:5432/data-store?ssl=disable&stringtype=unspecified"
+        value: "jdbc:postgresql://${SERVICE_NAME}-postgresql:5432/data-store?ssl=disable&stringtype=unspecified"
       - name: DATA_STORE_USER
-        value: "{{ tpl .Values.global.postgresUsername $}}"
+        value: hmcts
       - name: ES_HOSTS
-        value: "{{ .Release.Name }}-es"
+        value: "${SERVICE_NAME}-es"
     extraInitContainers: |
       - name: download-postgres-jdbc
         image: hmctspublic.azurecr.io/curl:7.70.0
