--- a/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
+++ b/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
@@ -213,8 +213,8 @@ ccd:
     replicas: 1
   
   logstash:
-    image: hmctspublic.azurecr.io/ccd/logstash
-    imageTag: "latest"
+    image: hmctspublic.azurecr.io/imported/logstash/logstash
+    imageTag: "7.16.1"
     imagePullPolicy: "IfNotPresent"
     logstashJavaOpts: -Xmx1g -Xms512M
     persistence:
