topic name changes

--- a/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
+++ b/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
@@ -536,7 +536,7 @@ sscs-evidence-share:
       DOCUMENT_MANAGEMENT_URL: "http://dm-store-aat.service.core-compute-aat.internal"
       CORE_CASE_DATA_API_URL: "http://${SERVICE_NAME}-ccd-data-store-api"
       SUBSCRIPTION_NAME: "sscs-evidenceshare-subscription-aat"
-      TOPIC_NAME: "sscs-evidenceshare-topic-preview"
+      TOPIC_NAME: "${SERVICE_NAME}-servicebus-sscs-evidenceshare-topic-preview"
       AMQP_HOST: "sscs-sb-preview.servicebus.windows.net"
       AMQP_USERNAME: "RootManageSharedAccessKey"
       ROBOTICS_EMAIL_FROM: "sscs@hmcts.net"
@@ -557,7 +557,7 @@ sscs-ccd-callback-orchestrator:
     readinessDelay: 90
     environment:
       SUBSCRIPTION_NAME: "sscs-evidenceshare-subscription-preview"
-      TOPIC_NAME: "sscs-evidenceshare-topic-preview"
+      TOPIC_NAME: "${SERVICE_NAME}-servicebus-sscs-evidenceshare-topic-preview"
       AMQP_HOST: "sscs-sb-preview.servicebus.windows.net"
       AMQP_USERNAME: "RootManageSharedAccessKey"
     secrets:
