--- a/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
+++ b/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
@@ -535,7 +535,7 @@ sscs-evidence-share:
       IDAM_API_URL: https://idam-api.aat.platform.hmcts.net
       DOCUMENT_MANAGEMENT_URL: "http://dm-store-aat.service.core-compute-aat.internal"
       CORE_CASE_DATA_API_URL: "http://${SERVICE_NAME}-ccd-data-store-api"
-      SUBSCRIPTION_NAME: "sscs-evidenceshare-subscription-aat"
+      SUBSCRIPTION_NAME: "sscs-evidenceshare-subscription-preview"
       TOPIC_NAME: "${SERVICE_NAME}-servicebus-sscs-evidenceshare-topic-preview"
       AMQP_HOST: "sscs-sb-preview.servicebus.windows.net"
       AMQP_USERNAME: "RootManageSharedAccessKey"
@@ -698,6 +698,7 @@ servicebus:
   setup:
     topics:
       - name: hmc-to-cft
+        subscriptionNeeded: yes
       - name: sscs-evidenceshare-topic-preview
     queues:
       - name: hmc-from-hmi
