--- a/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
+++ b/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
@@ -535,7 +535,7 @@ sscs-evidence-share:
       IDAM_API_URL: https://idam-api.aat.platform.hmcts.net
       DOCUMENT_MANAGEMENT_URL: "http://dm-store-aat.service.core-compute-aat.internal"
       CORE_CASE_DATA_API_URL: "http://${SERVICE_NAME}-ccd-data-store-api"
-      SUBSCRIPTION_NAME: "sscs-evidenceshare-subscription-preview"
+      SUBSCRIPTION_NAME: "${SERVICE_NAME}-servicebus-sscs-evidenceshare-topic-preview"
       TOPIC_NAME: "${SERVICE_NAME}-servicebus-sscs-evidenceshare-topic-preview"
       AMQP_HOST: "sscs-sb-preview.servicebus.windows.net"
       AMQP_USERNAME: "RootManageSharedAccessKey"
@@ -556,7 +556,7 @@ sscs-ccd-callback-orchestrator:
     releaseNameOverride: ${SERVICE_NAME}-sscs-ccd-callback-orchestrator
     readinessDelay: 90
     environment:
-      SUBSCRIPTION_NAME: "sscs-evidenceshare-subscription-preview"
+      SUBSCRIPTION_NAME: "${SERVICE_NAME}-servicebus-sscs-evidenceshare-topic-preview"
       TOPIC_NAME: "${SERVICE_NAME}-servicebus-sscs-evidenceshare-topic-preview"
       AMQP_HOST: "sscs-sb-preview.servicebus.windows.net"
       AMQP_USERNAME: "RootManageSharedAccessKey"
@@ -698,8 +698,8 @@ servicebus:
   setup:
     topics:
       - name: hmc-to-cft
-        subscriptionNeeded: yes
       - name: sscs-evidenceshare-topic-preview
+        subscriptionNeeded: yes
     queues:
       - name: hmc-from-hmi
       - name: hmc-to-hmi
