--- a/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
+++ b/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
@@ -691,7 +691,7 @@ hmc-cft-hearing-service:
 
 #Enable for queues/topics
 servicebus:
-  enabled: false
+  enabled: true
   resourceGroup: sscs-aso-preview-rg
   sbNamespace: sscs
   #Each topic/queue matches up to one used in the config above
