--- a/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
+++ b/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
@@ -535,8 +535,8 @@ sscs-evidence-share:
       IDAM_API_URL: https://idam-api.aat.platform.hmcts.net
       DOCUMENT_MANAGEMENT_URL: "http://dm-store-aat.service.core-compute-aat.internal"
       CORE_CASE_DATA_API_URL: "http://${SERVICE_NAME}-ccd-data-store-api"
-      SUBSCRIPTION_NAME: "${SERVICE_NAME}-servicebus-sscs-evidenceshare-topic-preview"
-      TOPIC_NAME: "${SERVICE_NAME}-servicebus-sscs-evidenceshare-topic-preview"
+      SUBSCRIPTION_NAME: "${SERVICE_NAME}-servicebus-o"
+      TOPIC_NAME: "${SERVICE_NAME}--servicebus-o"
       AMQP_HOST: "sscs-sb-preview.servicebus.windows.net"
       AMQP_USERNAME: "RootManageSharedAccessKey"
       ROBOTICS_EMAIL_FROM: "sscs@hmcts.net"
@@ -556,8 +556,8 @@ sscs-ccd-callback-orchestrator:
     releaseNameOverride: ${SERVICE_NAME}-sscs-ccd-callback-orchestrator
     readinessDelay: 90
     environment:
-      SUBSCRIPTION_NAME: "${SERVICE_NAME}-servicebus-sscs-evidenceshare-topic-preview"
-      TOPIC_NAME: "${SERVICE_NAME}-servicebus-sscs-evidenceshare-topic-preview"
+      SUBSCRIPTION_NAME: "${SERVICE_NAME}-servicebus-o"
+      TOPIC_NAME: "${SERVICE_NAME}-servicebus-o"
       AMQP_HOST: "sscs-sb-preview.servicebus.windows.net"
       AMQP_USERNAME: "RootManageSharedAccessKey"
     secrets:
